Added webview for profile view

--- a/app/src/main/res/layout/list_item_instagram_popular.xml
+++ b/app/src/main/res/layout/list_item_instagram_popular.xml
@@ -54,21 +54,23 @@
         android:text="Caption" />
 
     <TextView
-        android:id="@+id/tvLikes"
+        android:id="@+id/tvCommentsCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvCaption"
         android:paddingTop="5dp"
-        android:text="Likes"
+        android:text="0 comments"
         android:textColor="@color/blue" />
 
     <TextView
-        android:id="@+id/tvCommentsCount"
+        android:id="@+id/tvLikes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvLikes"
+        android:layout_below="@id/tvCaption"
+
+        android:layout_alignParentRight="true"
         android:paddingTop="5dp"
-        android:text="0 comments"
+        android:text="Likes"
         android:textColor="@color/blue" />
 
     <ImageView
